Applied the function to all emails

--- a/MinorProject.ipynb
+++ b/MinorProject.ipynb
@@ -1646,11 +1646,154 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Applying the process function to each and every mail"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sanchit/anaconda3/lib/python3.8/site-packages/bs4/__init__.py:414: MarkupResemblesLocatorWarning: \"http://www.post-gazette.com/columnists/20020905brian5\n",
+      "\" looks like a URL. Beautiful Soup is not an HTTP client. You should probably use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "converted_messages = data['Mail_body'].apply(process)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "doc_ids_spam = data[data['class']==1].index\n",
+    "doc_ids_ham = data[data['class']==0].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3900,)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "converted_ham = converted_messages[doc_ids_ham]\n",
+    "converted_ham.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1896,)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "converted_spam = converted_messages[doc_ids_spam]\n",
+    "converted_spam.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flat_ham = [j for i in converted_ham for j in i]\n",
+    "flat_spam = [j for i in converted_spam for j in i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "http      7563\n",
+       "use       3633\n",
+       "list      2880\n",
+       "one       2373\n",
+       "get       2286\n",
+       "mail      2255\n",
+       "would     2003\n",
+       "like      1931\n",
+       "messag    1849\n",
+       "work      1800\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ham_words = pd.Series(flat_ham).value_counts()\n",
+    "ham_words[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "http      3097\n",
+       "email     3090\n",
+       "free      2585\n",
+       "click     2058\n",
+       "receiv    1989\n",
+       "list      1971\n",
+       "get       1914\n",
+       "pleas     1852\n",
+       "busi      1792\n",
+       "order     1746\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam_words = pd.Series(flat_spam).value_counts()\n",
+    "spam_words[0:10]"
+   ]
   },
   {
    "cell_type": "code",
